# bevy_rapier

bevy_rapier2d/: Cargo.toml
bevy_rapier3d/: Cargo.toml
src/geometry/: collider.rs  collider_impl.rs
src/plugin/: context.rs  plugin.rs  systems.rs
src/render/lines/: mod.rs  render_dim.rs
