[package]
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "3-dimensional physics engine in Rust, official Bevy plugin."
documentation = "http://docs.rs/bevy_rapier3d"
edition = "2021"
homepage = "http://rapier.rs"
keywords = ["physics", "dynamics", "rigid", "real-time", "joints"]
license = "Apache-2.0"
name = "bevy_rapier3d"
readme = "README.md"
repository = "https://github.com/dimforge/bevy_rapier"
version = "0.15.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "../src/lib.rs"
required-features = ["dim3"]

[features]
debug-render = ["bevy/bevy_core_pipeline", "bevy/bevy_pbr", "bevy/bevy_render", "rapier3d/debug-render"]
default = ["dim3", "debug-render"]
dim3 = []
enhanced-determinism = ["rapier3d/enhanced-determinism"]
parallel = ["rapier3d/parallel"]
serde-serialize = ["rapier3d/serde-serialize", "serde"]
simd-nightly = ["rapier3d/simd-nightly"]
simd-stable = ["rapier3d/simd-stable"]
wasm-bindgen = ["rapier3d/wasm-bindgen"]

[dependencies]
bevy = {path = "../../bevy/", default-features = false}
nalgebra = {version = "0.31", features = ["convert-glam020"]}
# Don't enable the default features because we don't need the ColliderSet/RigidBodySet
bitflags = "1"
rapier3d = "0.14.0"
#bevy_prototype_debug_lines = { version = "0.6", features = ["3d"], optional = true }
log = "0.4"
serde = {version = "1", features = ["derive"], optional = true}

[dev-dependencies]
approx = "0.5.1"
bevy = {path = "../../bevy/", default-features = false, features = ["x11"]}
glam = {version = "0.20", features = ["approx"]}
