[package]
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "3-dimensional physics engine in Rust, official Bevy plugin."
documentation = "http://docs.rs/bevy_rapier3d"
edition = "2021"
homepage = "http://rapier.rs"
keywords = ["physics", "dynamics", "rigid", "real-time", "joints"]
license = "Apache-2.0"
name = "bevy_rapier3d"
readme = "README.md"
repository = "https://github.com/dimforge/bevy_rapier"
version = "0.20.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "../src/lib.rs"
required-features = ["dim3"]

[features]
bevy-render = [
  "bevy/bevy_render",
  "bevy/bevy_asset",
  "bevy/bevy_scene",
]
debug-render = ["debug-render-3d"]
debug-render-2d = ["bevy/bevy_core_pipeline", "bevy/bevy_sprite", "bevy/bevy_render", "rapier3d/debug-render"]
debug-render-3d = ["bevy/bevy_core_pipeline", "bevy/bevy_pbr", "bevy/bevy_render", "rapier3d/debug-render"]
default = ["dim3", "bevy-render", "debug-render-3d"]
dim3 = []
enhanced-determinism = ["rapier3d/enhanced-determinism"]
headless = []
parallel = ["rapier3d/parallel"]
profiler = ["rapier3d/profiler"]
serde-serialize = ["rapier3d/serde-serialize", "bevy/serialize", "serde"]
simd-nightly = ["rapier3d/simd-nightly"]
simd-stable = ["rapier3d/simd-stable"]
trace = ["bevy/trace"]
wasm-bindgen = ["rapier3d/wasm-bindgen"]

# Enables the AsyncCollider and AsyncSceneCollider components that wait for specific
# assets to be loaded before creating the actual Collider.
# See https://github.com/dimforge/bevy_rapier/issues/296 for a workaround on how
# to use this when using bevy headless.
async-collider = []

[dependencies]
bevy = {path = "./../../bevy", default-features = false}
nalgebra = {version = "^0.32.0", features = ["convert-glam022"]}
# Don't enable the default features because we don't need the ColliderSet/RigidBodySet
bitflags = "1"
rapier3d = {path = "../../rapier/crates/rapier3d"}
#bevy_prototype_debug_lines = { version = "0.6", features = ["3d"], optional = true }
log = "0.4"
serde = {version = "1", features = ["derive"], optional = true}

[dev-dependencies]
approx = "0.5.1"
bevy = {path = "./../../bevy", default-features = false, features = ["x11"]}
glam = {version = "0.22", features = ["approx"]}

[package.metadata.docs.rs]
# Enable all the features when building the docs on docs.rs
features = ["debug-render-3d", "serde-serialize"]
